--- a/index.html
+++ b/index.html
@@ -9,7 +9,22 @@
   <body>
     <div class="wrapper">
       <div class="container">
-        <header></header>
+        <header>
+          <div class="header__container">
+            <div class="header__container-left">
+              <div class="header-logo">logo</div>
+            </div>
+            <div class="header__container-right">
+              <ul class="header-menu">
+                <li>item1</li>
+                <li>item2</li>
+                <li>item3</li>
+                <li>item4</li>
+                <li>item5</li>
+              </ul>
+            </div>
+          </div>
+        </header>
 
         <main></main>
 
