update code dev

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       <div class="container">
         <header></header>
 
-        <main></main>
+        <main>update main</main>
 
         <footer></footer>
       </div>
