--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <header>
           <div class="header__container">
             <div class="header__container-left">
-              <div class="header-logo">logo</div>
+              <div class="header-logo">logo 123</div>
             </div>
             <div class="header__container-right">
               <ul class="header-menu">
