update code footer

--- a/index.html
+++ b/index.html
@@ -28,7 +28,14 @@
 
         <main>update main</main>
 
-        <footer></footer>
+        <footer>
+          <div class="footer__container">
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Veniam
+            commodi rem placeat cumque quasi eos quaerat, molestiae dolores
+            dignissimos officiis est amet ipsum velit, recusandae nostrum
+            dolore, fugit provident. Ipsum.
+          </div>
+        </footer>
       </div>
     </div>
   </body>
