update code footer dev

--- a/index.html
+++ b/index.html
@@ -28,7 +28,9 @@
 
         <main>update main</main>
 
-        <footer></footer>
+        <footer>
+          <div class="footer__container">lorem 123ssssssssssssssssssss</div>
+        </footer>
       </div>
     </div>
   </body>
